fix: app layout bugs
**Ссылка на таск**

https://kanban.ghfls.ru/task/54

**Описание выполненной работы**

- исправил баг с перекрытием скроллбара топбаром
- убрал лишний паддинг у страницы

!64

--- a/src/app/layouts/AppLayout/ui/AppLayout.module.css
+++ b/src/app/layouts/AppLayout/ui/AppLayout.module.css
@@ -18,8 +18,7 @@
 
 .main {
   padding-block: var(--topbar-height) var(--bottombar-height);
-  block-size: 100dvh;
-  overflow: auto;
+  min-block-size: 100dvh;
 }
 
 @media (--md-up) {
@@ -31,17 +30,7 @@
   }
 
   .main {
-    padding-block: calc(var(--topbar-height) + var(--space-12)) 0;
+    padding-block: var(--topbar-height) 0;
     padding-inline-start: var(--sidebar-width);
-  }
-}
-
-@media (--xxl-up) {
-  .navigation {
-    inline-size: var(--sidebar-width);
-  }
-
-  .main {
-    padding-block-start: calc(var(--topbar-height) + var(--space-24));
   }
 }
